Fixed feature alignment in css. hopefully for the last time

--- a/static-site-test.css
+++ b/static-site-test.css
@@ -12,10 +12,10 @@ html, body{height:100%; min-height: 100%; width:100%}
   .nav-social-item{display:inline-block;float:right;margin: 0 1px 0 0;}
 
 /* FEATURE PHOTO SECTION*/
-  .feature{margin: 0 auto; width: 99%;}
-  .feature > div{float: left;}
+  .feature{display:block; margin:0 auto; width:98%}
+  .feature > div{float:left;}
+  #korver-big{height: 460px; width: 600px;margin-left:auto;margin-right:auto;}
   .feature-photo-big{padding: 10px;}
-  #korver-big{height: 460px; width: 600px;}
   .feature-photo-topleft{padding: 10px 5px 5px 5px;}
   .feature-photo-topright{padding: 10px 10px 5px 5px;}
   .feature-photo-bottomleft{padding: 5px 5px 10px 5px;}
